--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-/.idea/
-/cmake-build-debug/
+# Project exclude paths
+/cmake-build-debug/CMakeFiles/
 /ffmpeg/
+/cmake-build-debug/
+/CMakeFiles/
+/.idea/
+/lib/
