✨ Rewrite Window UI code
Including parsing XML files, displaying them, and having the ability to debug it with `[Testing] Window UI State`!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG")
 
 # MSVC stuff
-set(CMAKE_CXX_FLAGS "/EHa")
+set(CMAKE_CXX_FLAGS "/EHa /DEBUG")
 
 # GCC stuff
 # set(CMAKE_CXX_FLAGS "-g")
